# mom6-spurious-experiments

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lib.cmake
config/: MOM_common
config/baroclinic_eddies/: CMakeLists-nk.txt  CMakeLists.txt  MOM_input.in  MOM_override.in  MOM_override_RHO.in  MOM_override_Z.in  diag_table  input.nml.in  input_1.nc  input_10_nk10.nc  input_10_nk20.nc  input_10_nk40.nc  input_1_nk10.nc  input_1_nk40.nc  input_4.nc  input_rho_1.nc  input_rho_10.nc  input_rho_4.nc  mk_input.py
config/internal_waves/: CMakeLists-remapping.txt  CMakeLists.txt  MOM_input  MOM_input.in  MOM_override_RHO.in  MOM_override_Z.in  MOM_override_ZT.in  diag_table  input.cdl  input.nc  input.nml  input.nml.in  input_rho.cdl  input_rho.nc
config/lock_exchange/: CMakeLists.txt  MOM_input  MOM_input.in  MOM_override.in  MOM_override_RHO.in  MOM_override_Z.in  diag_table  input.cdl  input.nc  input.nml  input.nml.in  input_rho.cdl  input_rho.nc  mk_input.py
